# git-exercise

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md
chapter10_data_validation/: README.md  chapter10_data_validation.ipynb  customer_schema.yml
chapter11_data_version_control/: README.md  dvc.yaml  params.yaml
chapter12_continuous_integration/: README.md
chapter13_package_your_project/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
chapter14_notebooks_in_production/: README.md
chapter2_dependency_management/: README.md
chapter2_dependency_management/04_uv_basics/: README.md  main.py  pyproject.toml
chapter3_modules_packages/: README.md  requirements.txt
chapter3_modules_packages/06_project_structure/: README.md  pyproject.toml
chapter3_modules_packages/06_project_structure/docs/: api.md
chapter3_modules_packages/06_project_structure/notebooks/: exploration.ipynb
chapter3_modules_packages/06_project_structure/scripts/: run_pipeline.py
chapter3_modules_packages/06_project_structure/src/data_pipeline/: __init__.py  config.py
chapter3_modules_packages/06_project_structure/src/data_pipeline/data/: __init__.py  loader.py  processor.py
chapter3_modules_packages/06_project_structure/src/data_pipeline/models/: __init__.py  predictor.py  trainer.py
chapter3_modules_packages/06_project_structure/src/data_pipeline/utils/: __init__.py  helpers.py
chapter3_modules_packages/06_project_structure/tests/test_data/: test_loader.py
chapter3_modules_packages/06_project_structure/tests/test_utils/: test_helpers.py
chapter4_variables/: README.md  (+1 more)
(+155 files in other folders)
